--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="./js/bank.js"></script>
+  <script src="./js/transaction.js"></script>
 </head>
 <body>
 
