--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script src="./lib/bank.js"></script>
+  <script src="./lib/transaction.js"></script>
   <script src="./lib/printer.js"></script>
 </head>
 <body>
